@@ -23,6 +23,8 @@ octsympy 2.6.1-dev
 
   * New command `sympref diagnose` to help debug Python/SymPy issues.
 
+  * Improve `function_handle` support by supporting more functions.
+
   * Fixes for several bugs mentioning "immutable matrices".
 
   * Various bug fixes and documentation updates.
